--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "mahbod",
+  "name": "@nurutomo/mahbod",
   "version": "1.0.0",
   "description": "Typescript WhatsApp Bot",
+  "homepage": "https://github.com/Nurutomo/mahbod",
   "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "start": "node ./lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "tsc",
     "build": "tsc"
   },
-  "keywords": [],
+  "keywords": ["whatsapp", "bot"],
   "author": "Nurutomo",
   "license": "ISC",
+  "repository": {
+    "url": "git@github.com:nurutomo/mahbod.git"
+  },
   "dependencies": {
     "@adiwajshing/baileys": "github:adiwajshing/Baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
@@ -25,5 +30,11 @@
     "@types/ws": "^8.5.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
-  }
+  },
+  "files": [
+    "database/*",
+    "lib/*",
+    "lang/*",
+    "sessions/*"
+  ]
 }
