--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,9 +16,9 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: |
-          echo @lexacode:https://npm.pkg.github.com/ > build/.npmrc
-          echo '//npm.pkg.github.com/:_authToken=${NPM_TOKEN}' >> build/.npmrc
+          echo @lexacode:https://npm.pkg.github.com/ > lib/.npmrc
+          echo '//npm.pkg.github.com/:_authToken=${NPM_TOKEN}' >> lib/.npmrc
       - run: npm publish
-        working-directory: ./build
+        working-directory: ./lib
         env:
           NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
