--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,10 @@
       "esModuleInterop": true,
       "resolveJsonModule": true,
       "forceConsistentCasingInFileNames": true,
+      "skipLibCheck": true,
       "declaration": true,
       "lib": ["es2020", "esnext.array", "DOM"]
     },
     "include": ["./src/**/*.ts"],
-    "exclude": ["node_modules", "src/Tests/*", "src/Binary/GenerateStatics.ts"]
+    "exclude": ["node_modules"]
   }
