yarn support maybe

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "./lib/index.d.ts",
   "scripts": {
     "prepare": "tsc",
+    "prepack": "tsc",
     "build:all": "tsc && typedoc",
     "build:docs": "typedoc",
     "build:tsc": "tsc",
