--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -27,13 +27,13 @@ jobs:
       uses: actions/setup-node@v2.1.1
 
     - name: Install Dependencies
-      run: |
-        yarn
-        npm install
+      # run: yarn
+      run: npm install
 
     - name: Build
-      run: yarn run build:all
-      
+      # run: yarn run build:all
+      run: npm run build:all
+
     - name: Publish to Pages
       uses: crazy-max/ghaction-github-pages@v2
       with:
