--- a/package.json
+++ b/package.json
@@ -33,13 +33,16 @@
     "@adiwajshing/baileys": "github:adiwajshing/Baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@commonify/lowdb": "^3.0.0",
+    "awesome-phonenumber": "^3.4.0",
+    "chalk": "^4.1.2",
     "link-preview-js": "^2.1.13",
     "mongoose": "^6.3.3",
     "node-fetch": "^2.6.7",
     "pino": "^7.11.0",
     "pino-pretty": "^7.6.1",
     "qrcode-terminal": "^0.12.0",
-    "steno": "^2.1.0"
+    "steno": "^2.1.0",
+    "url-regex": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^16.4.2",
